--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
                     <version>2.20.1</version>
                     <configuration>
                         <suiteXmlFiles>
-                            <suiteXmlFile>\\src\test\resources\testng.xml</suiteXmlFile>
+                            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
                     </configuration>
                 </plugin>
