added ChromDriver dependency

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
