--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>3.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
