--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
         </dependency>
 
         <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-chrome-driver</artifactId>
             <version>3.6.0</version>
@@ -52,13 +58,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.20.1</version>
-
                    <configuration>
                         <suiteXmlFiles>
                             <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
                     </configuration>
-
                 </plugin>
 
                 <plugin>
@@ -66,9 +70,7 @@
                     <artifactId>maven-surefire-report-plugin</artifactId>
                     <version>2.15</version>
                 </plugin>
-
             </plugins>
-
         </pluginManagement>
 
     </build>
